--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta content="oi" name="description" />
   </head>
   <body>
+    <noscript>이 앱을 실행하려면 JavaScript를 활성화해야 합니다.</noscript>
     <div id="root"></div>
     <script src="/src/main.tsx" type="module"></script>
   </body>
