--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="/oi.svg" rel="icon" type="image/svg+xml" />
     <title>oi</title>
     <meta content="oi" name="description" />
+    <meta name="robots" content="index, follow" />
   </head>
   <body>
     <noscript>이 앱을 실행하려면 JavaScript를 활성화해야 합니다.</noscript>
